--- a/src/style.css
+++ b/src/style.css
@@ -1,4 +1,5 @@
   h1 {
+    text-align: center;
         font-weight: 300;
         font-size: 42px;
         text-align: center;
@@ -7,11 +8,14 @@
         border-radius: 8px;
       }
       h2 {
-        font-weight: 300;
-        font-size: 35px;
+        border-radius: 20px;
+        border: 2px solid #4682b4;
+        font-weight: 130;
+        font-size: 25px;
         text-align: center;
         color: #d8bfd8;
         line-height: 40px;
+        border: 10px; #722f37;
       }
       img {
         display: block;
