--- a/src/style.css
+++ b/src/style.css
@@ -2,21 +2,15 @@
     text-align: center;
         font-weight: 300;
         font-size: 42px;
-        text-align: center;
+        border-radius: 20px;
+        border: 2px solid #4682b4;
+        margin: 0 auto;
+        display: block;
         color: #dda0dd;
         border: 2px solid #ffdab9;
         border-radius: 8px;
       }
-      h2 {
-        border-radius: 20px;
-        border: 2px solid #4682b4;
-        font-weight: 130;
-        font-size: 25px;
-        text-align: center;
-        color: #d8bfd8;
-        line-height: 40px;
-        border: 10px; #722f37;
-      }
+      
       img {
         display: block;
         margin: 0 auto;
